# birales

./: .gitignore  Dockerfile  MANIFEST.in  README  README.md  deploy.sh  plot_beam.py  requirements.pip  requirements.txt  setup.py
src/: CMakeLists.txt  beamformer.cpp  beamformer.hpp
src/app/: .gitignore
src/app/sandbox/beamformer/: TimeDelayAndSumBeamformer.py  main-yuan.py  post_processing.py  signals.py  yuan.py
src/app/sandbox/beamformer/post/: beam_pattern.html  beamformed_results.html
src/app/sandbox/postprocessing/: BeamData.py  OrbitDeterminationInputGenerator.py  SpaceDebrisController.py  SpaceDebrisDetector.py  main.py  od_input_generator.py  orbit_determination.py  server.py
src/app/sandbox/postprocessing/config/: application.py  log.py
src/app/sandbox/postprocessing/controllers/: OrbitDeterminationController.py  SpaceDebrisController.py
src/app/sandbox/postprocessing/data/: beam_sample_output.csv
src/app/sandbox/postprocessing/helpers/: DateTimeHelper.py  LineGeneratorHelper.py  TableMakerHelper.py
src/app/sandbox/postprocessing/lib/: BeamDataFilter.py  DBScanSpaceDebrisDetectionStrategy.py  LineSpaceDebrisDetectionStrategy.py  Log.py  SpaceDebrisCandidateCollection.py  SpaceDebrisDetection.py  markup.py
src/app/sandbox/postprocessing/models/: Beam.py  (+5 more)
src/old/: CMakeLists.txt  modules.cmake
src/old/beamformer/: CMakeLists.txt  beamforming_kernel.cu  beamforming_output.cpp  beamforming_thread.cu  beamshifts.cpp  survey.h
src/old/medicina-beamformer-pipeline/: CMakeLists.txt
src/old/python/: process_beams.py  process_multipixel.py
(+684 files in other folders)
